# so_reg_parser

./: main.py  parse_so_register.exe.spec  pyproject.toml
